--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://hugo-page-yu3.pages.dev/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
