update about page

--- a/exampleSite/config/_default/menus.en.toml
+++ b/exampleSite/config/_default/menus.en.toml
@@ -11,13 +11,14 @@ name = "About"
 url = "about/"
 weight = 2
 
-[[main]]
-name = "Elements"
-url = "elements/"
-weight = 3
+# [[main]]
+# name = "Elements"
+# url = "elements/"
+# weight = 3
 
 [[main]]
-weight = 4
+# weight = 4
+weight = 3
 name = "Pages"
 hasChildren = true
 
@@ -31,20 +32,20 @@ parent = "Pages"
 name = "Contact"
 url = "contact/"
 
-[[main]]
-parent = "Pages"
-name = "Authors"
-url = "authors/"
+# [[main]]
+# parent = "Pages"
+# name = "Authors"
+# url = "authors/"
 
 [[main]]
 parent = "Pages"
 name = "Categories"
 url = "categories/"
 
-[[main]]
-parent = "Pages"
-name = "404 Page"
-url = "404/"
+# [[main]]
+# parent = "Pages"
+# name = "404 Page"
+# url = "404/"
 
 
 # footer menu
